  users can set a new preference, search-match-redirect, which decides if search
  should redirect them to exact matches is available. By default, this is set to
  false, which maintains the previous behaviour without preference bloat. Change
  your site's default by setting $wgDefaultUserOptions['search-match-redirect'].
* …

==== Changed configuration ====
* $wgResourceLoaderMaxage (T235314) - This configuration array controls the
  max-age for HTTP caching through the Cache-Control header. It has uses the
  "versioned" key for urls that do have a version parameter, and the
  "unversioned" key for urls without a version parameter. The sub keys for
  "client" and "server" are no longer supported in MediaWiki 1.35.
* …

==== Removed configuration ====
* $wgSysopEmailBans — This setting, deprecated in 1.34, was removed. To let
  sysops block email access, use $wgGroupPermissions['sysop']['blockemail'].
* $wgDBWindowsAuthentication — This setting had no effect anymore after support
  for SQL Server was removed in 1.34. (T230418)
* …


=== New user-facing features in 1.35 ===
* …


=== New developer features in 1.35 ===
* If CSP is enabled, extensions can now add additional sources using the
  ContentSecurityPolicy::addDefaultSource, ::addStyleSrc and ::addScriptSrc
  methods (e.g. $context->getOutput()->getCSP()->addDefaultSrc( 'example.com' ))
* …

=== External library changes in 1.35 ===
* …

==== New external libraries ====
* Added doctrine/dbal 2.9.3 (dev-only).
* …

==== Changed external libraries ====
* symfony/yaml was upgraded from 3.4.28 to 4.3.4
* pear/mail_mime was upgraded from 1.10.2 to 1.10.4
* wikimedia/less.php was upgrade from 1.8.0 to 1.8.2
* Updated nikic/php-parser from 3.1.5 to 4.2.4 (dev-only).
* Updated jQuery from v3.3.1 to v3.4.1.
* Updated jQuery Migrate from v3.0.1 to v3.1.0.
* Updated jakub-onderka/php-console-highlighter from v0.3.2 to v0.4 (dev-only).
* Updated wikimedia/assert from 0.2.2 to 0.4.0.
* …
