@@ -37,6 +37,8 @@ For notes on 1.34.x and older releases, see HISTORY.
   should redirect them to exact matches is available. By default, this is set to
   false, which maintains the previous behaviour without preference bloat. Change
   your site's default by setting $wgDefaultUserOptions['search-match-redirect'].
+* Per-user concurrency in SpecialContributions can now be limited by setting
+  $wgPoolCounterConf['SpecialContributions'] appropriately.
 * …
 
 ==== Changed configuration ====
